tests/invalid/Function_Invalid_2.whiley
function f(int x) -> int:
    return 1

function f(int x) -> int:
    return 2
